feat: Notebook de tratamento da bases e os arquivos resultantes

--- a/Teste imports.ipynb
+++ b/Teste imports.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,9 +21,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3.7.6 64-bit ('base': conda)",
    "language": "python",
-   "name": ".venv"
+   "name": "python_defaultSpec_1596762448022"
   },
   "language_info": {
    "codemirror_mode": {
